# morphogenesis-sort

./: .gitignore  .readthedocs.yaml  LICENSE.txt  PROJECT_COMPLETION_SUMMARY.md  pyproject.toml  requirements.txt  setup.py
analysis/: scientific_analysis.py
analysis/reports/: __init__.py  generator.py  html_generator.py  pdf_generator.py
analysis/statistical/: __init__.py  descriptive.py  hypothesis_testing.py
analysis/visualization/: animated_morphogenesis_visualizer.py  comprehensive_analysis_plots.py  comprehensive_visualization_suite.py  demo_visualizations.py
analysis/visualization/publication_figures/: publication_summary_report.md
config/: default.yaml
core/: __init__.py
core/agents/: __init__.py  cell_agent.py
core/agents/behaviors/: __init__.py  adaptive_cell.py  config.py  morphogen_cell.py  sorting_cell.py
core/coordination/: __init__.py  conflict_resolver.py  coordinator.py  scheduler.py  spatial_index.py
core/data/: __init__.py  actions.py  serialization.py  state.py  types.py
core/metrics/: __init__.py  collector.py  counters.py  exporters.py  snapshots.py
docs/: ARCHITECTURE.md  DELIVERABLES_SUMMARY.md  IMPLEMENTATION_PLAN.md  MORPHOGENESIS_RESEARCH_REPORT.md  PROJECT_STRUCTURE.md  README.md  README_DOCUMENTATION.md  conf.py  conf.py.backup  index.rst  installation.rst  quickstart.rst  validation_report.md
docs/_static/css/: custom.css
docs/_static/js/: custom.js
docs/api/: analysis.rst  core.rst  experiments.rst  infrastructure.rst
docs/concepts/: algorithms.rst  applications.rst  cellular_agents.rst  emergence.rst  index.rst  mathematics.rst  modeling.rst  morphogenesis.rst
docs/development/: index.rst
docs/examples/: advanced.rst  applications.rst  index.rst  intermediate.rst
docs/examples/basic/: cell_sorting.rst
docs/methodology/: experimental_design.rst  index.rst
docs/tutorials/: advanced.rst  index.rst  intermediate.rst  research.rst  technical.rst
docs/tutorials/beginner/: understanding_cellular_agents.rst
experiments/: demo_experiment.py  experiment_config.py  experiment_runner.py  run_morphogenesis_experiments.py  sorting_agents.py
infrastructure/: __init__.py
infrastructure/logging/: __init__.py  async_logger.py  formatters.py  logger.py  performance_logger.py
infrastructure/performance/: __init__.py  monitor.py
infrastructure/testing/: __init__.py  fixtures.py  test_case.py
requirements/: base.txt  development.txt  docs.txt  testing.txt
scripts/: analyze_results.py  run_experiments.py  setup_environment.py  validate_installation.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_agent_coordination.py
tests/unit/: __init__.py  test_cell_agents.py  test_data_types.py  test_serialization.py
